--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello world!
+<!doctype html>
+
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Bruno Grillo</title>
+  <meta name="description" content="El sitio web de Bruno, nada importante.">
+  <meta name="author" content="Bruno Grillo">
+
+</head>
+
+<body>
+  <p>¡Hola! Bienvenido a lo que próximamente será mi sitio :)</p>
+  <p>¡Todavía no está listo! Si quieres, puedes dejarme un mensaje por <a href="https://github.com/bcgrillo/bcgrillo.github.io/issues/new">aquí</a>.</p>
+</body>
+</html>
