deploy: d5137fe98a2eea66f2413aa2f220325de56ea241

--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -20,9 +20,45 @@
       <div class="w-full flex-grow flex items-center justify-center z-0">
         <div class="w-full flex -z-10 justify-center">
     <div class="basis-full sm:basis-4/5 xl:basis-2/3 px-6 pt-8 md:p-10 pb-24 sm:pb-10 2xl:px-20 m-auto w-full">
-        <h1 class="text-3xl sm:text-4xl w-full mb-6 sm:mb-10 font-sans2 font-semibold">Sobre mí</h1>
+        <h1 class="text-3xl sm:text-4xl w-full mb-6 sm:mb-10 font-sans2">
+            <span class="font-semibold">Bruno Grillo</span>
+            <span class="font-light text-gray-500">Sobre mí</span>
+        </h1>
             
-        <p class="mb-4 lg:mb-6">En construcción 🚧</p>
+        <p class="mb-4 lg:mb-6">
+            <img class="rounded-full border-8 border-white w-48 md:w-52 float-right ml-8 mb-8 grayscale" alt="Ilustración de Bruno Grillo" src="/images/bruno_profile_color.png">
+            <b>Ingeniero de Software</b> con experiencia en programación, análisis, diseño, gestión de proyectos,
+            dirección de equipos de desarrollo, de mantenimiento y de soporte... He tenido la oportunidad de ejercer
+            la mayoría de los roles relacionados con el desarrollo y la implantación de soluciones software.
+            Actualmente trabajo como líder técnico y gestor de proyectos, además, en los últimos años he podido trabajar en la mejora
+            de los procesos de desarrollo en distintos equipos, con especial énfasis en la mejora de la calidad y en la entrega continua.
+        </p><p class="mb-4 lg:mb-6">
+            <b>Geek desde que tengo memoria</b>, o al menos desde los 10 años, cuando entró en casa nuestro primer ordenador. Unos años más
+            tarde ya estaba trasteando con algo llamado <i>QuickBASIC</i>, haciendo que las teclas del ordenador sonaran como las de un
+            piano. A los 14 años, un amigo y yo, gracias a unos libros de <i>HTML</i> y <i>ASP</i>, hicimos nuestra primera página Web, un portal
+            juvenil para el pueblo donde vivíamos. Después de alguna otra página Web y de unos meses en una tienda de ordenadores, a
+            los 17 años, tuve mi primer trabajo, y desde entonces mi trayectoria profesional, mis estudios y gran parte de mi tiempo
+            libre han girado en torno a la informática y especialmente al desarrollo software.
+        </p><p class="mb-4 lg:mb-6">
+            De 2012 a 2016 tuve la suerte de poder liderar a un fantástico equipo en la conocida fabricante
+            española de tecnología <b>BQ</b>. Fueron los años en los que más crecí a nivel profesional y me convertí en un <b>apasionado de la
+            gestión de proyectos y de la calidad</b>. Durante esos años también pude desenvolverme como <b>analista de funcional</b> y
+            como gestor de equipos, viviendo el proceso de desarrollo e implantación de soluciones software en todas sus fases.
+        </p><p class="mb-4 lg:mb-6">
+            Desde 2016 he trabajado como <b>consultor</b>, líder técnico y como gestor de proyectos de desarrollo a medida, casi siempre con el <i>stack</i>
+            tecnológico de <b>Microsoft</b>. Durante los últimos años he podido colaborar con excelentes profesionales, lo que me ha permitido seguir creciendo
+            profesionalmente y perfeccionar mis conocimientos relacionados con los procesos de desarrollo y con la gestión de la
+            calidad. También he tenido la oportunidad de conocer a importantes compañías de diversos sectores, en distintos proyectos
+            de desarrollo, y a ayudar a que sus equipos mejoren sus <b>procesos de desarrollo</b> mediante la <b>calidad</b>, la <b>agilidad</b> y la
+            <b>entrega continua</b>.
+        </p><p class="mb-4 lg:mb-6">
+            Siempre he compaginado el trabajo con los estudios y es algo que pretendo seguir haciendo. Últimamente tengo mucho interés
+            por todo lo relacionado con la <i>IA</i>. También he tenido un <a href="https://lanalua.github.io/bcgrillo" target="_blank" class="underline decoration-dotted">
+            blog</a>, aunque hace mucho que no escribo. Soy Técnico Superior, y he finalizado el <b>Grado de Ingeniería de Software en la Universidad
+            Politécnica de Madrid</b>, a falta de entregar el proyecto fin de grado. También estoy certificado como <b>Scrum Master</b> por European Scrum, 
+            además de otras formaciones y certificaciones que podrás consultar en mi <a href="https://www.linkedin.com/in/bcgrillo" target="_blank" class="underline decoration-dotted">
+            perfil de Linkedin</a>.
+        </p>
     </div>
 </div>
 
