--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -18,7 +18,7 @@
   <body class="h-full bg-gray-800 text-white">
     <div class="flex flex-col min-h-full justify-center">
       <div class="w-full flex-grow flex items-center justify-center z-0">
-        <div class="w-full flex -z-10 justify-center">
+        <div class="w-full flex -z-10 justify-center text-sm lg:text-base">
     <div class="basis-full sm:basis-4/5 xl:basis-2/3 px-6 pt-8 md:p-10 pb-24 sm:pb-10 2xl:px-20 m-auto w-full">
         <h1 class="text-3xl sm:text-4xl w-full mb-6 sm:mb-10 font-sans2">
             <span class="font-semibold">Bruno Grillo</span>
@@ -26,7 +26,7 @@
         </h1>
             
         <p class="mb-4 lg:mb-6">
-            <img class="rounded-full border-8 border-white w-48 md:w-52 float-right ml-8 mb-8 grayscale" alt="Ilustración de Bruno Grillo" src="/images/bruno_profile_color.png">
+            <img class="rounded-full border-8 border-white w-48 md:w-52 align-middle sm:float-right mx-auto sm:mr-0 sm:ml-8 mb-4 sm:mb-8 grayscale" alt="Ilustración de Bruno Grillo" src="/images/bruno_profile_color.png">
             <b>Ingeniero de Software</b> con experiencia en programación, análisis, diseño, gestión de proyectos,
             dirección de equipos de desarrollo, de mantenimiento y de soporte... He tenido la oportunidad de ejercer
             la mayoría de los roles relacionados con el desarrollo y la implantación de soluciones software.
