--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
 </div>
 
       </div>
-      <footer class="block bg-gray-800 text-gray-400 text-xs lg:text-sm text-center flex-shrink w-full py-3">
+      <footer class="block text-gray-400 text-xs lg:text-sm text-center flex-shrink w-full py-3">
         &copy; 2023 Bruno Grillo
         · Creado con <span class="text-rose-300">❤</span> y <a href="https://github.com/mzrnsh/jekyllwind" class="underline decoration-dotted">Jekyllwind</a>
         <span class="hidden md:inline"> · </span><br class="md:hidden">Powered by <a href="https://jekyllrb.com" class="underline decoration-dotted">Jekyll</a> 
