--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -19,51 +19,58 @@
     <div class="flex flex-col min-h-full justify-center">
       <div class="w-full flex-grow flex items-center justify-center z-0">
         <div class="w-full flex -z-10 justify-center text-sm lg:text-base">
-    <div class="basis-full sm:basis-4/5 xl:basis-2/3 px-6 pt-8 md:p-10 pb-24 sm:pb-10 2xl:px-20 m-auto w-full">
-        <h1 class="text-3xl sm:text-4xl w-full mb-6 sm:mb-10 font-sans2">
-            <span class="font-semibold">Bruno Grillo</span>
-            <span class="font-light text-gray-500">Sobre mí</span>
-        </h1>
-            
-        <p class="mb-4 lg:mb-6">
-            <img class="rounded-full border-8 border-white w-48 md:w-52 align-middle sm:float-right mx-auto sm:mr-0 sm:ml-8 mb-4 sm:mb-8 grayscale" alt="Ilustración de Bruno Grillo" src="/images/bruno_profile_color.png">
-            <b>Ingeniero de Software</b> con experiencia en programación, análisis, diseño, gestión de proyectos,
-            dirección de equipos de desarrollo, de mantenimiento y de soporte... He tenido la oportunidad de ejercer
-            la mayoría de los roles relacionados con el desarrollo y la implantación de soluciones software.
-            Actualmente trabajo como líder técnico y gestor de proyectos, además, en los últimos años he podido trabajar en la mejora
-            de los procesos de desarrollo en distintos equipos, con especial énfasis en la mejora de la calidad y en la entrega continua.
-        </p><p class="mb-4 lg:mb-6">
-            <b>Geek desde que tengo memoria</b>, o al menos desde los 10 años, cuando entró en casa nuestro primer ordenador. Unos años más
-            tarde ya estaba trasteando con algo llamado <i>QuickBASIC</i>, haciendo que las teclas del ordenador sonaran como las de un
-            piano. A los 14 años, un amigo y yo, gracias a unos libros de <i>HTML</i> y <i>ASP</i>, hicimos nuestra primera página Web, un portal
-            juvenil para el pueblo donde vivíamos. Después de alguna otra página Web y de unos meses en una tienda de ordenadores, a
-            los 17 años, tuve mi primer trabajo, y desde entonces mi trayectoria profesional, mis estudios y gran parte de mi tiempo
-            libre han girado en torno a la informática y especialmente al desarrollo software.
-        </p><p class="mb-4 lg:mb-6">
-            De 2012 a 2016 tuve la suerte de poder liderar a un fantástico equipo en la conocida fabricante
-            española de tecnología <b>BQ</b>. Fueron los años en los que más crecí a nivel profesional y me convertí en un <b>apasionado de la
-            gestión de proyectos y de la calidad</b>. Durante esos años también pude desenvolverme como <b>analista de funcional</b> y
-            como gestor de equipos, viviendo el proceso de desarrollo e implantación de soluciones software en todas sus fases.
-        </p><p class="mb-4 lg:mb-6">
-            Desde 2016 he trabajado como <b>consultor</b>, líder técnico y como gestor de proyectos de desarrollo a medida, casi siempre con el <i>stack</i>
-            tecnológico de <b>Microsoft</b>. Durante los últimos años he podido colaborar con excelentes profesionales, lo que me ha permitido seguir creciendo
-            profesionalmente y perfeccionar mis conocimientos relacionados con los procesos de desarrollo y con la gestión de la
-            calidad. También he tenido la oportunidad de conocer a importantes compañías de diversos sectores, en distintos proyectos
-            de desarrollo, y a ayudar a que sus equipos mejoren sus <b>procesos de desarrollo</b> mediante la <b>calidad</b>, la <b>agilidad</b> y la
-            <b>entrega continua</b>.
-        </p><p class="mb-4 lg:mb-6">
-            Siempre he compaginado el trabajo con los estudios y es algo que pretendo seguir haciendo. Últimamente tengo mucho interés
-            por todo lo relacionado con la <i>IA</i>. También he tenido un <a href="https://lanalua.github.io/bcgrillo" target="_blank" class="underline decoration-dotted">
-            blog</a>, aunque hace mucho que no escribo. Soy Técnico Superior, y he finalizado el <b>Grado de Ingeniería de Software en la Universidad
-            Politécnica de Madrid</b>, a falta de entregar el proyecto fin de grado. También estoy certificado como <b>Scrum Master</b> por European Scrum, 
-            además de otras formaciones y certificaciones que podrás consultar en mi <a href="https://www.linkedin.com/in/bcgrillo" target="_blank" class="underline decoration-dotted">
-            perfil de Linkedin</a>.
-        </p>
+    <div class="basis-full sm:basis-4/5 xl:basis-2/3 flex flex-col sm:flex-row-reverse">
+        <div class="sm:basis-2/5 md:basis-1/3 h-[40vh] sm:h-auto flex justify-center items-start sm:justify-end bg-[url('/images/background_bw.jpg')] bg-center bg-cover">
+        </div>
+        <div class="sm:basis-3/5 md:basis-2/3 sm:h-screen sm:overflow-auto flex">
+            <div class="px-6 py-8 md:p-10 pb-10 sm:pb-8 2xl:px-20 m-auto">
+                <h1 class="text-3xl sm:text-4xl w-full mb-6 sm:mb-10 font-sans2">
+                    <span class="font-semibold">Bruno&nbsp;Grillo</span>
+                    <span class="font-light text-gray-500">Sobre&nbsp;mí</span>
+                </h1>
+                <div class="text-sm lg:text-base">
+                    <p class="mb-4 lg:mb-6">
+                        <b>Ingeniero de Software</b> con experiencia en programación, análisis, diseño de soluciones, gestión de proyectos y 
+                        dirección de equipos. Actualmente trabajo como líder técnico y gestor de proyectos, con especial foco en la mejora
+                        de los procesos de desarrollo, la mejora de la calidad, la agilidad y la entrega continua.
+                    </p><p class="mb-4 lg:mb-6">
+                        <b>Geek desde que tengo memoria</b>, tenía 10 años cuando entró en casa nuestro primer ordenador. Poco después ya
+                        estaba trasteando con algo llamado <i>QuickBASIC</i>, haciendo que las teclas del ordenador sonaran como un
+                        piano. A los 14 años, un amigo y yo hicimos nuestra primera página Web, un portal para el pueblo donde vivíamos. 
+                        A los 17 años, tuve mi primer trabajo, y desde entonces mi trayectoria profesional, mis estudios y gran parte de mi tiempo
+                        libre han girado en torno a la informática.
+                    </p><p class="mb-4 lg:mb-6">
+                        Entre 2012 y 2016 tuve la suerte de poder liderar a un fantástico equipo en la conocida fabricante
+                        española de tecnología <b>BQ</b>. Fueron los años en los que más crecí a nivel profesional. Durante esos años pude desenvolverme 
+                        como analista de funcional y gestor de equipos, viviendo el proceso de desarrollo e implantación de soluciones software en todas 
+                        sus fases.
+                    </p><p class="mb-4 lg:mb-6">
+                        Desde 2016 he trabajado como consultor, líder técnico y gestor de proyectos de desarrollo a medida, casi siempre con el <i>stack</i>
+                        tecnológico de <b>Microsoft</b>. Durante los últimos años he podido colaborar con excelentes profesionales, lo que me ha permitido seguir creciendo
+                        profesionalmente y perfeccionar mis conocimientos relacionados con la industria del software.
+                    </p><p class="mb-4 lg:mb-6">
+                        Siempre he compaginado el trabajo con los estudios. Últimamente tengo mucho interés por todo lo relacionado con la <i>IA</i>.
+                        Soy Técnico Superior, y <i>casi</i> <b>Graduado en Ingeniería de Software en la Universidad
+                        Politécnica de Madrid</b>, a falta de entregar el proyecto fin de grado. También estoy certificado como <b>Scrum Master</b> por <i>European Scrum</i>, 
+                        además de otras formaciones y certificaciones que podrás consultar en mi <a href="https://www.linkedin.com/in/bcgrillo" target="_blank" class="underline decoration-dotted">
+                        perfil de Linkedin</a>.
+                    </p><p class="text-center sm:text-left">
+                        <a class="text-white hover:bg-gray-700 rounded-full inline-block" href="/">
+                            <svg version="1.1" width="32" height="32" viewBox="0 0 20 20" fill="white">
+                            <g stroke="#ffffff" stroke-width="2.23">
+                                <path d="m1.7319 9.9956c2e-5 0.75604 0.09966 1.4842 0.2989 2.1846 0.19929 0.70036 0.47768 1.3582 0.83516 1.9736 0.35753 0.61537 0.78683 1.1751 1.2879 1.6791 0.50112 0.50402 1.0579 0.93625 1.6703 1.2967 0.61247 0.36043 1.2703 0.64028 1.9736 0.83956 0.70331 0.19925 1.433 0.29889 2.189 0.2989 0.75606-1.5e-5 1.4843-0.09965 2.1846-0.2989 0.70038-0.19928 1.3553-0.47914 1.9648-0.83956 0.60953-0.36045 1.1678-0.79269 1.6747-1.2967 0.50696-0.50404 0.94066-1.0637 1.3011-1.6791 0.36044-0.6154 0.64176-1.2733 0.84396-1.9736 0.2022-0.70037 0.3033-1.4286 0.3033-2.1846 4e-6 -0.75605-0.09963-1.4843-0.2989-2.1846-0.19926-0.70037-0.47912-1.3568-0.83956-1.9692-0.36044-0.61245-0.79267-1.1692-1.2967-1.6703-0.50402-0.5011-1.0637-0.93187-1.6791-1.2923-0.61538-0.36044-1.2733-0.64029-1.9736-0.83956-0.70036-0.19926-1.4286-0.2989-2.1846-0.2989-0.75603 1e-6 -1.4857 0.09964-2.189 0.2989-0.70328 0.19927-1.3612 0.47766-1.9736 0.83516-0.61244 0.35751-1.1692 0.78681-1.6703 1.2879-0.50108 0.5011-0.93038 1.0593-1.2879 1.6747-0.35749 0.61538-0.63588 1.2733-0.83516 1.9736-0.19925 0.70036-0.29888 1.4286-0.2989 2.1846zm2.7692 0.035172v-0.035172l4.0264-4.211h2.9187l-3.0681 3.1385h6.6725v2.1802h-6.6725l3.0681 3.1385h-2.9187zm-4.5011-0.043964c2.1e-5 -0.90843 0.12017-1.7846 0.36044-2.6286 0.24032-0.84396 0.58024-1.6366 1.0198-2.378 0.43958-0.74139 0.96412-1.4169 1.5736-2.0264 0.60954-0.60952 1.285-1.1341 2.0264-1.5736 0.74141-0.43956 1.5355-0.77948 2.3824-1.0198 0.8469-0.24029 1.7246-0.36044 2.633-0.36044 0.90844 3e-6 1.7861 0.12016 2.633 0.36044 0.8469 0.2403 1.641 0.57729 2.3824 1.011 0.7414 0.4337 1.4183 0.95531 2.0308 1.5648 0.61246 0.60952 1.1385 1.285 1.578 2.0264 0.43956 0.74139 0.77949 1.5355 1.0198 2.3824 0.2403 0.84688 0.36044 1.7275 0.36044 2.6418 2e-6 0.90842-0.12014 1.7861-0.36044 2.633-0.24029 0.84688-0.58022 1.641-1.0198 2.3824-0.43956 0.74138-0.96556 1.4183-1.578 2.0308-0.61245 0.61244-1.2894 1.1384-2.0308 1.578-0.74138 0.43954-1.5355 0.78094-2.3824 1.0242-0.84688 0.24321-1.7245 0.36482-2.633 0.36484-0.90841-1.6e-5 -1.7861-0.12016-2.633-0.36044-0.84687-0.24031-1.641-0.57877-2.3824-1.0154-0.74137-0.43664-1.4168-0.96119-2.0264-1.5736-0.6095-0.61247-1.134-1.2894-1.5736-2.0308-0.43954-0.7414-0.77946-1.537-1.0198-2.3868-0.24027-0.84982-0.36042-1.7319-0.36044-2.6462z" stroke="none"/>
+                            </g>
+                            </svg>
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
       </div>
-      <footer class="block bg-gray-800 text-gray-400 text-xs lg:text-sm text-center flex-shrink w-full py-3">
+      <footer class="block text-gray-400 text-xs lg:text-sm text-center flex-shrink w-full py-3">
         &copy; 2023 Bruno Grillo
         · Creado con <span class="text-rose-300">❤</span> y <a href="https://github.com/mzrnsh/jekyllwind" class="underline decoration-dotted">Jekyllwind</a>
         <span class="hidden md:inline"> · </span><br class="md:hidden">Powered by <a href="https://jekyllrb.com" class="underline decoration-dotted">Jekyll</a> 
