--- a/_pages/contacto.html
+++ b/_pages/contacto.html
@@ -10,7 +10,7 @@ permalink: /contacto
             <span class="font-semibold">Contacto</span>
         </h1>
             
-        <p class="mb-4 lg:mb-6">Si quieres, déjame un mensaje y trataré de responderte en cuanto sea posible.</p>
+        <p class="mb-4 lg:mb-6">Si quieres, déjame un mensaje y trataré de responderte en cuanto me sea posible.</p>
      
         <form id="contacto" action="#enviando" class="space-y-4" method="POST">
             <div>
@@ -29,7 +29,7 @@ permalink: /contacto
             <p id="error" class="hidden target:block sm:target:inline-block sm:ml-4 text-red-300"><span class="material-icons align-text-bottom text-[1.3rem]">&#xe000;</span> Error al enviar, puedes probar contactarme por <a href="https://www.linkedin.com/in/bcgrillo" target="_blank" class="underline decoration-dotted">Linkedin</a>.</p>
         </form>
 
-        <p class="text-xs mt-4 lg:mt-6 text-gray-600 italic mb-4 lg:mb-6">Powered by <a href="https://getform.io" target="_blank">getform.io</a></p>
+        <p class="text-xs mt-4 lg:mt-6 text-gray-500 italic mb-4 lg:mb-6">Powered by <a href="https://getform.io" target="_blank">getform.io</a></p>
 
         <p class="text-center sm:text-left">
             <a class="text-white hover:bg-gray-700 rounded-full inline-block" href="/">
