--- a/_pages/contacto.html
+++ b/_pages/contacto.html
@@ -5,7 +5,7 @@ permalink: /contacto
 ---
 
 <div class="w-full flex -z-10 justify-center">
-    <div class="basis-full sm:basis-4/5 xl:basis-2/3 px-6 pt-8 md:p-10 pb-24 sm:pb-10 2xl:px-20 m-auto w-full">
+    <div class="basis-full sm:basis-4/5 xl:basis-2/3 px-6 py-8 md:p-10 pb-10 sm:pb-8 2xl:px-20 m-auto w-full">
         <h1 class="text-3xl sm:text-4xl w-full mb-6 sm:mb-10 font-sans2">
             <span class="font-semibold">Contacto</span>
         </h1>
