deploy: e4fd0dbf527dd4f4d6e221c87accdd5a5b28f58e

--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="theme-color" content="#E5E7EB">
+    <meta name="theme-color" content="#1f2937">
     <title>Contacto - Bruno Grillo</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/assets/css/main.css">
@@ -19,7 +19,7 @@
     <div class="flex flex-col min-h-full justify-center">
       <div class="w-full flex-grow flex items-center justify-center z-0">
         <div class="w-full flex -z-10 justify-center">
-    <div class="basis-full sm:basis-4/5 xl:basis-2/3 px-6 pt-8 md:p-10 pb-24 sm:pb-10 2xl:px-20 m-auto w-full">
+    <div class="basis-full sm:basis-4/5 xl:basis-2/3 px-6 py-8 md:p-10 pb-10 sm:pb-8 2xl:px-20 m-auto w-full">
         <h1 class="text-3xl sm:text-4xl w-full mb-6 sm:mb-10 font-sans2">
             <span class="font-semibold">Contacto</span>
         </h1>
