--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="theme-color" content="#E5E7EB">
+    <meta name="theme-color" content="#1f2937">
     <title>Sobre mí - Bruno Grillo</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/assets/css/main.css">
