deploy: a2638335fbb6dc08f5f6ef5db852af09f195eb5a

--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -40,9 +40,9 @@
                         A los 17 años, tuve mi primer trabajo, y desde entonces mi trayectoria profesional, mis estudios y gran parte de mi tiempo
                         libre han girado en torno a la informática.
                     </p><p class="mb-4 lg:mb-6">
-                        Entre 2012 y 2016 tuve la suerte de poder liderar a un fantástico equipo en la conocida fabricante
-                        española de tecnología <b>BQ</b>. Fueron los años en los que más crecí a nivel profesional. Durante esos años pude desenvolverme 
-                        como analista de funcional y gestor de equipos, viviendo el proceso de desarrollo e implantación de soluciones software en todas 
+                        Entre 2012 y 2016 tuve la suerte de poder liderar a un fantástico equipo de desarrolladores en una de las principales compañías
+                        españolas de tecnología, <b>BQ</b>. Fueron los años en los que más crecí a nivel profesional. Durante esos años pude desenvolverme 
+                        como analista funcional y gestor de equipos, viviendo varios proyectos de desarrollo e implantación de soluciones software en todas 
                         sus fases.
                     </p><p class="mb-4 lg:mb-6">
                         Desde 2016 he trabajado como consultor, líder técnico y gestor de proyectos de desarrollo a medida, casi siempre con el <i>stack</i>
