deploy: 0f4b0d59459c9f184bcb4d3e4c95da10775c2be1

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="w-full flex-grow flex items-center justify-center z-0">
         <div class="m-5 md:m-10 w-full sm:flex sm:flex-row justify-center">
     <div class="flex justify-center items-center sm:justify-end">
-        <img class="rounded-full border-8 border-white shadow-xl w-52 md:w-64 shadow-gray-900" alt="Ilustración de Bruno Grillo" src="/images/bruno_profile_color.png">
+        <img class="rounded-full border-8 border-white shadow-xl w-52 md:w-64 shadow-gray-900" alt="Ilustración de Bruno Grillo" src="/images/bruno_profile_color_new.jpg">
     </div>
     <div class="mx-5 sm:mr-0 sm:ml-10 xl:ml-20">
         <h1 class="mt-10 sm:mt-0 font-sans2 font-semibold">
