--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: "Inicio"
             <div class="text-5xl md:leading-normal xl:text-[4rem] md:inline-block">Bruno <br class="md:hidden">Grillo</div>
         </h1>
         <h2 class="text-lg xl:text-[1.9rem] leading-5 md:leading-7 my-3 md:my-4 font-sans2 font-semibold">Ingeniero de Software<br class="md:hidden"></h2>
-        <h5 class="text-xs md:text-base mt-1 mb-5 md:mb-8 text-gray-500">Software Development Manager<span class="hidden xl:inline"> · </span><br class="xl:hidden">Tech Lead · Scrum Master</h5>
+        <h5 class="text-xs md:text-base mt-1 mb-5 md:mb-8 text-gray-500">Engineering Manager<span class="hidden xl:inline"> · </span><br class="xl:hidden">Tech Lead · Scrum Master</h5>
         <div class="sm:flex sm:items-center">
             <div class="block sm:flex sm:flex-wrap mb-4 sm:mb-0">
                 <a class="border border-solid border-white bg-white text-gray-800 hover:bg-gray-200 hover:border-gray-200 py-2 px-4 rounded-lg mr-5" href="/contacto">
