--- a/index.html
+++ b/index.html
@@ -23,18 +23,14 @@
         <img class="rounded-full border-8 border-white shadow-xl w-52 md:w-64 shadow-gray-900" alt="Ilustración de Bruno Grillo" src="/images/bruno_profile_color_new.jpg">
     </div>
     <div class="mx-5 sm:mr-0 sm:ml-10 xl:ml-20">
-        <h1 class="mt-10 sm:mt-0 font-sans2 font-semibold">
-            <div class="text-5xl md:leading-normal xl:text-[4rem] md:inline-block">Bruno <br class="md:hidden">Grillo</div>
+        <h1 class="mt-10 sm:mt-0 font-sans2 font-semibold -mb-2">
+            <div class="text-5xl xl:text-[4rem] md:inline-block">Bruno <br class="md:hidden">Grillo</div>
         </h1>
-        <h2 class="text-lg xl:text-[1.9rem] leading-5 md:leading-7 my-3 md:my-4 font-sans2 font-semibold">Ingeniero de Software<br class="md:hidden"></h2>
-        <h5 class="text-xs md:text-base mt-1 mb-5 md:mb-8 text-gray-500">Software Developer<span class="hidden xl:inline"> · </span><br class="xl:hidden">Tech Lead · Scrum Master</h5>
+        <h5 class="text-xs md:text-base mt-1 mb-5 ml-1 md:mb-8 text-gray-500">Software Engineer</h5>
         <div class="sm:flex sm:items-center">
             <div class="block sm:flex sm:flex-wrap mb-4 sm:mb-0">
                 <a class="border border-solid border-white bg-white text-gray-800 hover:bg-gray-200 hover:border-gray-200 py-2 px-4 rounded-lg mr-5" href="/contacto">
                     Contacto
-                </a>
-                <a class="border border-solid border-white text-white hover:bg-gray-700 py-2 px-4 rounded-lg mr-3" href="/sobre-mi">
-                    Sobre&nbsp;mí
                 </a>
             </div>
             <div class="block sm:flex sm:flex-wrap h-10">
@@ -48,9 +44,6 @@
                 <a class="text-white hover:bg-gray-700 py-2 px-2 rounded-full inline-block mr-1" href="https://medium.com/@brunogrillo.dev" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 512 512" fill="white" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M60.713,135.684c0.637,-6.285 -1.759,-12.499 -6.453,-16.728l-47.807,-57.59l0,-8.603l148.437,0l114.735,251.627l100.872,-251.627l141.503,0.001l0,8.602l-40.874,39.189c-3.525,2.685 -5.272,7.102 -4.541,11.472l0,287.947c-0.731,4.37 1.016,8.786 4.541,11.471l39.917,39.19l0,8.602l-200.782,0l0,-8.602l41.35,-40.147c4.065,-4.061 4.065,-5.257 4.065,-11.468l0,-232.749l-114.973,292.009l-15.536,0l-133.859,-292.009l0,195.709c-1.114,8.228 1.618,16.513 7.41,22.462l53.784,65.235l0,8.603l-152.502,0l0,-8.603l53.784,-65.235c5.749,-5.96 8.321,-14.301 6.929,-22.462l0,-226.296Z" id="Shape" style="fill-rule:nonzero;"/></svg>
                 </a>
-                <a class="text-white hover:bg-gray-700 py-2 px-2 rounded-full inline-block mr-1" href="https://threads.net/@brunogrillo" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 192 192"><path d="M141.537 88.9883C140.71 88.5919 139.87 88.2104 139.019 87.8451C137.537 60.5382 122.616 44.905 97.5619 44.745C97.4484 44.7443 97.3355 44.7443 97.222 44.7443C82.2364 44.7443 69.7731 51.1409 62.102 62.7807L75.881 72.2328C81.6116 63.5383 90.6052 61.6848 97.2286 61.6848C97.3051 61.6848 97.3819 61.6848 97.4576 61.6855C105.707 61.7381 111.932 64.1366 115.961 68.814C118.893 72.2193 120.854 76.925 121.825 82.8638C114.511 81.6207 106.601 81.2385 98.145 81.7233C74.3247 83.0954 59.0111 96.9879 60.0396 116.292C60.5615 126.084 65.4397 134.508 73.775 140.011C80.8224 144.663 89.899 146.938 99.3323 146.423C111.79 145.74 121.563 140.987 128.381 132.296C133.559 125.696 136.834 117.143 138.28 106.366C144.217 109.949 148.617 114.664 151.047 120.332C155.179 129.967 155.42 145.8 142.501 158.708C131.182 170.016 117.576 174.908 97.0135 175.059C74.2042 174.89 56.9538 167.575 45.7381 153.317C35.2355 139.966 29.8077 120.682 29.6052 96C29.8077 71.3178 35.2355 52.0336 45.7381 38.6827C56.9538 24.4249 74.2039 17.11 97.0132 16.9405C119.988 17.1113 137.539 24.4614 149.184 38.788C154.894 45.8136 159.199 54.6488 162.037 64.9503L178.184 60.6422C174.744 47.9622 169.331 37.0357 161.965 27.974C147.036 9.60668 125.202 0.195148 97.0695 0H96.9569C68.8816 0.19447 47.2921 9.6418 32.7883 28.0793C19.8819 44.4864 13.2244 67.3157 13.0007 95.9325L13 96L13.0007 96.0675C13.2244 124.684 19.8819 147.514 32.7883 163.921C47.2921 182.358 68.8816 191.806 96.9569 192H97.0695C122.03 191.827 139.624 185.292 154.118 170.811C173.081 151.866 172.51 128.119 166.26 113.541C161.776 103.087 153.227 94.5962 141.537 88.9883ZM98.4405 129.507C88.0005 130.095 77.1544 125.409 76.6196 115.372C76.2232 107.93 81.9158 99.626 99.0812 98.6368C101.047 98.5234 102.976 98.468 104.871 98.468C111.106 98.468 116.939 99.0737 122.242 100.233C120.264 124.935 108.662 128.946 98.4405 129.507Z"></path></svg>
-                </a>
                 <a class="text-white hover:bg-gray-700 py-2 px-2 rounded-full inline-block" href="https://www.linkedin.com/in/bcgrillo" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                 </a>
@@ -61,7 +54,7 @@
 
       </div>
       <footer class="block text-gray-400 text-xs lg:text-sm text-center flex-shrink w-full py-3">
-        &copy; 2024 Bruno Grillo
+        &copy; 2025 Bruno Grillo
         · Creado con <span class="text-rose-300">❤</span> y <a href="https://github.com/mzrnsh/jekyllwind" class="underline decoration-dotted">Jekyllwind</a>
         <span class="hidden md:inline"> · </span><br class="md:hidden">Powered by <a href="https://jekyllrb.com" class="underline decoration-dotted">Jekyll</a> 
         · Hosted by <a href="https://pages.github.com/" class="underline decoration-dotted">GitHub Pages</a>
