--- a/index.html
+++ b/index.html
@@ -22,31 +22,31 @@
     <div class="flex justify-center items-center sm:justify-end">
         <img class="rounded-full border-8 border-white shadow-xl w-52 md:w-64 shadow-gray-900" alt="Ilustración de Bruno Grillo" src="/images/bruno_profile_color_new.jpg">
     </div>
-    <div class="mx-5 sm:mr-0 sm:ml-10 xl:ml-20">
-        <h1 class="mt-10 sm:mt-0 font-sans2 font-semibold -mb-2">
-            <div class="text-5xl xl:text-[4rem] md:inline-block">Bruno <br class="md:hidden">Grillo</div>
-        </h1>
-        <h5 class="text-xs md:text-base mt-1 mb-5 ml-1 md:mb-8 text-gray-500">Software Engineer</h5>
-        <div class="sm:flex sm:items-center">
-            <div class="block sm:flex sm:flex-wrap mb-4 sm:mb-0">
-                <a class="border border-solid border-white bg-white text-gray-800 hover:bg-gray-200 hover:border-gray-200 py-2 px-4 rounded-lg mr-5" href="/contacto">
-                    Contacto
-                </a>
-            </div>
-            <div class="block sm:flex sm:flex-wrap h-10">
-                <a class="text-white hover:bg-gray-700 py-2 px-2 rounded-full inline-block mr-1" href="https://github.com/bcgrillo" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
-                </a>
-                <a class="text-white hover:bg-gray-700 py-2 px-2 rounded-full inline-block mr-1" href="https://bsky.app/profile/brunogrillo.dev" target="_blank">
-                    <!--<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg>-->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 600 530" fill="white"><path d="m135.72 44.03c66.496 49.921 138.02 151.14 164.28 205.46 26.262-54.316 97.782-155.54 164.28-205.46 47.98-36.021 125.72-63.892 125.72 24.795 0 17.712-10.155 148.79-16.111 170.07-20.703 73.984-96.144 92.854-163.25 81.433 117.3 19.964 147.14 86.092 82.697 152.22-122.39 125.59-175.91-31.511-189.63-71.766-2.514-7.3797-3.6904-10.832-3.7077-7.8964-0.0174-2.9357-1.1937 0.51669-3.7077 7.8964-13.714 40.255-67.233 197.36-189.63 71.766-64.444-66.128-34.605-132.26 82.697-152.22-67.108 11.421-142.55-7.4491-163.25-81.433-5.9562-21.282-16.111-152.36-16.111-170.07 0-88.687 77.742-60.816 125.72-24.795z"/></svg>
-                </a>
-                <a class="text-white hover:bg-gray-700 py-2 px-2 rounded-full inline-block mr-1" href="https://medium.com/@brunogrillo.dev" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 512 512" fill="white" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M60.713,135.684c0.637,-6.285 -1.759,-12.499 -6.453,-16.728l-47.807,-57.59l0,-8.603l148.437,0l114.735,251.627l100.872,-251.627l141.503,0.001l0,8.602l-40.874,39.189c-3.525,2.685 -5.272,7.102 -4.541,11.472l0,287.947c-0.731,4.37 1.016,8.786 4.541,11.471l39.917,39.19l0,8.602l-200.782,0l0,-8.602l41.35,-40.147c4.065,-4.061 4.065,-5.257 4.065,-11.468l0,-232.749l-114.973,292.009l-15.536,0l-133.859,-292.009l0,195.709c-1.114,8.228 1.618,16.513 7.41,22.462l53.784,65.235l0,8.603l-152.502,0l0,-8.603l53.784,-65.235c5.749,-5.96 8.321,-14.301 6.929,-22.462l0,-226.296Z" id="Shape" style="fill-rule:nonzero;"/></svg>
-                </a>
-                <a class="text-white hover:bg-gray-700 py-2 px-2 rounded-full inline-block" href="https://www.linkedin.com/in/bcgrillo" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
-                </a>
+    <div class="mx-5 sm:mr-0 sm:ml-10 xl:ml-20 flex items-center">
+        <div class="flex items-center flex-col w-full sm:block">
+            <h1 class="mt-10 sm:mt-0 font-sans2 font-semibold">
+                <div class="text-4xl xl:text-[3rem] md:inline-block">Bruno Grillo</div>
+            </h1>
+            <h5 class="text-s md:text-base mt-1 mb-3 sm:ml-[0.15rem] md:mb-4 text-gray-500">Software Engineer</h5>
+            <div class="sm:flex sm:items-center sm:ml-[-0.3rem]">
+                <div class="block sm:flex sm:flex-wrap h-10">
+                    <a class="text-white hover:bg-gray-700 py-2 px-2 rounded-full inline-block mr-1" href="/contacto">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white"><path d="M12 12.713l11.985-7.713h-23.97l11.985 7.713zm0 2.287l-12-7.713v12.713h24v-12.713l-12 7.713z"/></svg>
+                    </a>
+                    <a class="text-white hover:bg-gray-700 py-2 px-2 rounded-full inline-block mr-1" href="https://github.com/bcgrillo" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                    </a>
+                    <a class="text-white hover:bg-gray-700 py-2 px-2 rounded-full inline-block mr-1" href="https://bsky.app/profile/brunogrillo.dev" target="_blank">
+                        <!--<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg>-->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 600 530" fill="white"><path d="m135.72 44.03c66.496 49.921 138.02 151.14 164.28 205.46 26.262-54.316 97.782-155.54 164.28-205.46 47.98-36.021 125.72-63.892 125.72 24.795 0 17.712-10.155 148.79-16.111 170.07-20.703 73.984-96.144 92.854-163.25 81.433 117.3 19.964 147.14 86.092 82.697 152.22-122.39 125.59-175.91-31.511-189.63-71.766-2.514-7.3797-3.6904-10.832-3.7077-7.8964-0.0174-2.9357-1.1937 0.51669-3.7077 7.8964-13.714 40.255-67.233 197.36-189.63 71.766-64.444-66.128-34.605-132.26 82.697-152.22-67.108 11.421-142.55-7.4491-163.25-81.433-5.9562-21.282-16.111-152.36-16.111-170.07 0-88.687 77.742-60.816 125.72-24.795z"/></svg>
+                    </a>
+                    <a class="text-white hover:bg-gray-700 py-2 px-2 rounded-full inline-block mr-1" href="https://medium.com/@brunogrillo.dev" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 512 512" fill="white" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M60.713,135.684c0.637,-6.285 -1.759,-12.499 -6.453,-16.728l-47.807,-57.59l0,-8.603l148.437,0l114.735,251.627l100.872,-251.627l141.503,0.001l0,8.602l-40.874,39.189c-3.525,2.685 -5.272,7.102 -4.541,11.472l0,287.947c-0.731,4.37 1.016,8.786 4.541,11.471l39.917,39.19l0,8.602l-200.782,0l0,-8.602l41.35,-40.147c4.065,-4.061 4.065,-5.257 4.065,-11.468l0,-232.749l-114.973,292.009l-15.536,0l-133.859,-292.009l0,195.709c-1.114,8.228 1.618,16.513 7.41,22.462l53.784,65.235l0,8.603l-152.502,0l0,-8.603l53.784,-65.235c5.749,-5.96 8.321,-14.301 6.929,-22.462l0,-226.296Z" id="Shape" style="fill-rule:nonzero;"/></svg>
+                    </a>
+                    <a class="text-white hover:bg-gray-700 py-2 px-2 rounded-full inline-block" href="https://www.linkedin.com/in/bcgrillo" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
